# ascend-matvec-benchmark

./: .gitignore  CMakeLists.txt  README.md  build.sh  env  env.md  perf.sh  run.sh
ascendc/: CMakeLists.txt  main_ascend.cpp  matvec_kernel.cpp
cpu/: CMakeLists.txt  main_cpu.cpp
mindspore/: ascend.ipynb  cpu.ipynb  matvec_ascend.py  matvec_cpu.py
